--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^19.1.3",
     "astro": "5.7.11",
     "astro-font": "^1.1.0",
+    "astro-og-canvas": "^0.7.2",
     "dayjs": "^1.11.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
